--- a/src/components/About/AboutCom.scss
+++ b/src/components/About/AboutCom.scss
@@ -4,16 +4,21 @@
 
 .about_cls {
   // background-color: $bg-main;
-  &.section_padding {
-    padding: 40px 15px;
-  }
+  background-color: $newbw;
+  // min-height: 150vh;
+  color: black;
+
 }
 
 .about_img,
 .about_box {
-  flex: 0 0 50%;
+  flex: 0 0 40%;
   max-width: 100%;
   padding: 10px;
+}
+.about_box
+{
+  flex: 60%;
 }
 
 /*? ------------About_img -s --------------- */
@@ -24,44 +29,38 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  
+
   .img_box {
     position: relative;
     overflow: hidden;
     padding: 10px;
     position: relative;
+    border-radius: 200px 20px;
+    // background-color: $accent-color;
+    background-color: $bg-main;
+    // border: 5px solid black;
     // width: 450px;/
 
     img {
       // width: 300px;
       position: relative;
-      width: 400px;
-      height: 420px;
+      width: 320px;
+      height: 380px;
       z-index: 1;
       vertical-align: middle;
-      border: 15px solid $black-900;
     }
   }
 }
-.abt_btn_box {
-  margin-top: 10px;
-  z-index: 11;
-  display: flex;
-  justify-content: space-between;
 
-  button {
-    padding: 10px 20px;
-    font-size: 0.8rem;
-  }
-}
-/*? ------------About_img -e --------------- */
+
+/*? ------------About_box -s --------------- */
 .about_box {
   z-index: 1;
 
   .about_content {
     .about_txt {
       font-size: 16px;
-      color: $text-low;
+      // color: $text-low;
 
       p {
         line-height: 1.7rem;
@@ -70,11 +69,24 @@
           color: $accent-color;
           font-weight: 900;
         }
+        box1
+        {
+          // font-size: 44px;
+          // border: 2px  black;
+        }
+        box2
+        {
+          // font-size: 44px;
+        }
+        box3
+        {
+          // font-size: 44px;
+
+        }
       }
     }
 
     .title_box {
-      
       .titles {
         display: flex;
         margin-top: 1.8rem;
@@ -82,7 +94,7 @@
         gap: 5px;
 
         .tab_links {
-          flex: 0 0 30%;
+          flex: 0 0 50%;
           // background-color: red;
 
           font-size: 18px;
@@ -102,7 +114,7 @@
           }
 
           &.active_link::after {
-            width: 40%;
+            width: 20%;
             border-radius: 30px;
           }
         }
@@ -110,12 +122,12 @@
     }
 
     .tab_contents {
-    // background-color: red;
-     height: 24vh;
+      // background-color: red;
+      height: 24vh;
       flex: 60%;
       padding-top: 10px;
       font-size: 12px;
-      color: $text-low;
+      // color: $text-low;
 
       ul {
         li {
@@ -123,17 +135,16 @@
           line-height: 1.3rem;
 
           a {
-            color: $accent-color;
+            // color: $accent-color;
             font-size: 12px;
           }
           span {
             /* color: red; */
-            color: $white-1000;
+            // color: $white-1000;
             font-weight: 600;
             margin-right: 10px;
             font-size: 15px;
           }
-        
         }
       }
     }
