--- a/src/components/Home/HomeCom.scss
+++ b/src/components/Home/HomeCom.scss
@@ -1,103 +1,132 @@
 @import "../../variables";
 
 .home_cls {
-    // max-height: 100vh;
-    // background-image: url("../../assets/Background-imgs/bg3-bw.jpg");
-
-    background-color: black;
+    background-color: #f9f5f2;
+    // min-height: 150vh;
+    color: black;
 }
 
-.home-banner {
+.spiral {
+    position: absolute;
+}
+.home_cntr {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    padding-top: 60px;
+
+    .rainbow {
+        transform: scale(0.2) rotate(40deg);
+        position: absolute;
+        top: 50px;
+        right: 20px;
+    }
+
+    .spiral {
+        transform: scale(0.2) rotate(-40deg);
+        position: absolute;
+        top: 50px;
+        left: 20px;
+    }
+}
+
+.grid_box {
+    background-color: #eeff7c;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 6px black;
+
+    height: 80vh;
+    width: 96%;
+    display: flex;
+    // align-items: flex-end;
+    justify-content: center;
+
+    // background: #333;
+    background-image: linear-gradient(rgba(14, 14, 14, 0.04) 0.1em, transparent 0.1em),
+        linear-gradient(90deg, rgba(0, 0, 0, 0.04) 0.1em, transparent 0.1em);
+    background-size: 2em 2em;
+
+    .home_txt {
+        padding-top: 60px;
+        // background-color: red;
+        line-height: 3rem;
+
+        h3 {
+            font-size: 25px;
+
+            span {
+                font-size: 35px;
+                box-shadow: 10px 10px 10px solid black;
+            }
+        }
+
+        h1 {
+            color: #ff5a34;
+            text-shadow: 2px 3px black;
+            font-size: 50px;
+            letter-spacing: 2px;
+            -webkit-text-stroke: 1px rgb(151, 80, 80);
+            text-transform: uppercase;
+            font-family: sans-serif;
+            font-weight: 900;
+        }
+    }
+
+    
+}
+
+.resume_btn {
+    background-color: red;
+    height: 80px;
+    width: 80px;
+    border-radius: 100%;
+    position: absolute;
+    bottom: calc(100% - 83vh);
+    right: 80px;
+
+    display: flex;
     justify-content: center;
     align-items: center;
 
-    width: 100%;
-    height: 100vh;
+    border: 2px solid black;
+    font-size: 13px;
+    font-weight: 600;
+    animation: rotate 5s linear infinite;
 
-    // background-position: 50%;
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    // overflow: hidden;
-    // position: relative;
+    &::after{
+        font-family: "Font Awesome 5 Free";
+        content: "\f178";
+        font-size: 19px;
+     
+
+        // content: "";
+        height: 40px;
+        width: 40px;
+        background-color:#eeff7c;
+        border-radius: 50%;
+        position: absolute;
+
+      
+    }
+
+    li {
+        list-style: none;
+        position: absolute;
+        text-align: center;
+        transform: rotate(calc(30deg * var(--tm)));
+        inset: 1px;
+        color: white;
+    }
+
 }
 
-// .overlay:before {
-//     background-color: rgba(0, 0, 0, 0.3);
-//     content: "";
-//     height: 100%;
-//     left: 0;
-//     position: absolute;
-//     top: 0;
-//     width: 100%;
-// }
-// .overlay > div {
-//     position: relative;
-//     z-index: 5;
-// }
 
-.hb-typo {
-    // padding: 100px;
-    background-color: green;
-    // margin-bottom: 10px;
-    
-
-    h6 {
-        font-size: 1.4rem;
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
     }
-    h1 {
-        // font-size: 5rem;
-        // font-weight: 900;
-        // color: transparent;
-        // background-image: $grad-main;
-        // background-clip: text;
-        // -webkit-background-clip: text;
-
-        color: #fff;
-        font-size: 80px;
-        font-weight: 900;
-        letter-spacing: 5px;
-       text-transform: uppercase;
-        // margin-bottom: 15px;
-    }
-    h3 {
-        font-size: 2.3rem;
-        font-weight: 500;
-
-        .prof {
-            // opacity: 0;
-            background: hsla(0, 0%, 100%, 0.1);
-            border-radius: 30px;
-            color: #fff;
-            display: inline-flex;
-            font-size: 1.2rem;
-            font-weight: 600;
-            letter-spacing: 1px;
-            margin: 0 3px 8px;
-            padding: 7px 20px;
-            // text-transform: uppercase;
-            transition: opacity 0.3s ease-in-out;
-            animation: fadeIn 1.5s infinite;
-        }
-    }
-}
-
-.quote_box {
-    position: absolute;
-    bottom: calc(100% - 97vh);
-    right: 10px;
-    padding: 10px;
-
-    p {
-        font-size: 0.9rem;
-        font-weight: 400;
-    }
-}
-
-@media (max-width: 500px) {
-    .hb-typo {
-        // font-size: 20px;
-        margin-top: -110px;
+    100% {
+        transform: rotate(360deg);
     }
 }
