--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -12,7 +12,7 @@ $navbar-bg: #1c1d2434;
 $stk-nav-bg: #1c1d24;;
 $navbar-border:#513030;
 
-$newbw:#F9F5F2;
+$newbw:#f9f5f2;
 
 //text Colors
 $accent-color:#3F91F9;
