--- a/src/components/About/AboutCom.scss
+++ b/src/components/About/AboutCom.scss
@@ -63,11 +63,24 @@
       // color: $text-low;
 
       p {
-        line-height: 1.7rem;
+        line-height: 2rem;
+        font-size:18px;
+        font-weight: 600;
 
         span {
           color: $accent-color;
           font-weight: 900;
+        }
+
+        img
+        {
+          width: 50px;
+          height: 50px;
+          // background-color: red;
+          // margin-top: -10px;
+          margin-bottom: -15px;
+         
+          padding: 3px;
         }
         box1
         {
